@@ -28,6 +28,7 @@ public class OSValidator {
 		return (os.indexOf("win") >= 0);
 
 	}
+	
 
 	public static boolean isMac() {
 
